chore: Update verbiage

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,139 +1,129 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Portfolio &mdash; An Average Developer</title>
-    <link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
-  </head>
-  <body>
-    <main class="content">
-      <h1 id="about">About Myself</h1>
-      <p>
-        I go by "Average Helper" online, partly because my name is super generic. Average, really.
-        I've been a programmer for about 12 years. I try to be helpful where I can, especially to
-        write respectful software.
-      </p>
-      <p>
-        This portfolio is real basic, made to quickly point to my other projects and experience. It
-        isn't much to look at, but it is mine.
-      </p>
+	<head>
+		<meta charset="UTF-8" />
+		<title>An Average Developer</title>
+		<link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
+	</head>
+	<body>
+		<main class="content">
+			<h1 id="about">About Myself</h1>
+			<p>
+				I go by "Average Helper" online, partly because my name is super generic. An average name,
+				really. I've been doing software things since 2011. I try to be helpful where I can,
+				especially to write respectful software.
+			</p>
 
-      <hr />
+			<hr />
 
-      <h2 id="projects">Projects</h2>
-      <p>
-        Here's just a few things I worked on myself that I'm proud of. You can
-        <a href="https://github.com/AverageHelper" target="_blank">check my GitHub</a> or
-        <a href="https://codeberg.org/AverageHelper" target="_blank">Codeberg</a> for more:
-      </p>
+			<h2 id="projects">Stuff I do for fun</h2>
+			<p>
+				Here's just a few things I worked on myself that I'm proud of. (You can
+				<a href="https://github.com/AverageHelper" target="_blank">check my GitHub</a> or
+				<a href="https://codeberg.org/AverageHelper" target="_blank">Codeberg</a> for more.)
+			</p>
 
-      <ul>
-        <li>
-          <a href="https://github.com/AverageHelper/Gamgee" target="_blank">Gamgee</a> &ndash; A fun
-          little Discord bot to help manage a music queue for public DJ events. Written in
-          <a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a>.
-        </li>
-        <li>
-          <a href="https://github.com/AverageHelper/meta-comments" target="_blank">meta-comments</a>
-          &ndash; The first VS Code plugin I ever published! It decorates code based on
-          specially-formatted comments.
-        </li>
-        <li>
-          <a href="https://github.com/AverageHelper/ItemEncryptor" target="_blank">ItemEncryptor</a>
-          &ndash; A <a href="https://www.swift.org" target="_blank" class="hint">Swift</a> package
-          to make data encryption easy. I use this in some of my smaller projects to facilitate
-          end-to-end encryption of sensitive data.
-        </li>
-        <li>
-          <a href="https://recorded.finance" target="_blank">Recorded Finance</a>
-          &ndash; An
-          <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank" class="hint"
-            >end-to-end encrypted</a
-          >
-          finance app for keeping track of account balances. I had a version of this written for iOS
-          in Swift, but I've began to port that project to the web for better cross-platform
-          compatibility and accessibility. The project is still in its infant stages, with several
-          front-end glitches I want to fix before I "release" the project into the wild. The
-          front-end is written in
-          <a href="https://svelte.dev" target="_blank" class="hint">Svelte</a>, with
-          <a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a> on
-          the front- and back-end.
-        </li>
-        <li>
-          <a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
-            >Trump Donald</a
-          >
-          &ndash; An iOS application based on the game
-          <a href="https://en.wikipedia.org/wiki/Whac-A-Mole" target="_blank" class="hint"
-            >Whac-a-mole</a
-          >.
-        </li>
-        <li>
-          <a href="https://averagehelper.github.io" target="_blank">My blog</a> &ndash; An
-          experiment to see how GitHub Pages work. I post ramblings there from time to time. The
-          posts are written in
-          <a href="https://www.markdownguide.org" target="_blank" class="hint">Markdown</a>, and the
-          site is generated automagically using
-          <a href="https://www.zola.com/" target="_blank" class="hint">Zola</a>.
-        </li>
-      </ul>
+			<ul>
+				<li>
+					<a href="https://github.com/AverageHelper/Gamgee" target="_blank">Gamgee</a> &ndash; A fun
+					little Discord bot to help manage a music queue for public DJ events. Written in
+					<a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a>.
+				</li>
+				<li>
+					<a href="https://github.com/AverageHelper/meta-comments" target="_blank">meta-comments</a>
+					&ndash; The first VS Code plugin I ever published! It decorates code based on
+					specially-formatted comments.
+				</li>
+				<li>
+					<a href="https://github.com/AverageHelper/ItemEncryptor" target="_blank">ItemEncryptor</a>
+					&ndash; A <a href="https://www.swift.org" target="_blank" class="hint">Swift</a> package
+					to make data encryption easy. I use this in some of my smaller projects to facilitate
+					end-to-end encryption of sensitive data.
+				</li>
+				<li>
+					<a href="https://recorded.finance" target="_blank">Recorded Finance</a>
+					&ndash; An
+					<a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank" class="hint"
+						>end-to-end encrypted</a
+					>
+					finance app for keeping track of account balances. I had a version of this written for iOS
+					in Swift, but I've began to port that project to the web for better cross-platform
+					compatibility and accessibility. The project is still in its infant stages, with several
+					front-end glitches I want to fix before I "release" the project into the wild. The
+					front-end is written in
+					<a href="https://svelte.dev" target="_blank" class="hint">Svelte</a>, with
+					<a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a> on
+					the front- and back-end.
+				</li>
+				<li>
+					<a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
+						>Trump Donald</a
+					>
+					&ndash; An iOS application based on the game
+					<a href="https://en.wikipedia.org/wiki/Whac-A-Mole" target="_blank" class="hint"
+						>Whac-a-mole</a
+					>.
+				</li>
+				<li>
+					<a href="https://averagehelper.github.io" target="_blank">My blog</a> &ndash; An
+					experiment to see how GitHub Pages work. I post ramblings there from time to time. The
+					posts are written in
+					<a href="https://www.markdownguide.org" target="_blank" class="hint">Markdown</a>, and the
+					site is generated automagically using
+					<a href="https://www.zola.com/" target="_blank" class="hint">Zola</a>.
+				</li>
+			</ul>
 
-      <!-- <hr />
+			<hr />
 
-      <h2 id="experience">Experience</h2>
-      <p>
-        I've been in the software industry for a number of years, working mainly with open-source
-        projects and mobile applications. I recently entered the workforce in the industry, working
-        mainly with web technologies ever since.
-      </p>
-      <ul>
-        <li>
-          <a href="https://inventoryshield.com" target="_blank">Inventory Shield, LLC</a> (2018 -
-          present) &ndash; I am a senior developer at this startup company, working with
-          <a href="https://vuejs.org" target="_blank" class="hint">Vue.js</a>,
-          <a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a>, and
-          <a href="https://nodejs.org" target="_blank" class="hint">Node.js</a> to help design and build our
-          <a href="https://inventoryshield.com" target="_blank">inventory-</a> and
-          <a href="https://referralreactor.com" target="_blank">referral-management</a> products.
-          Our products include platform applications for
-          <a href="https://apps.apple.com/us/app/inventory-shield/id1502458904" target="_blank"
-            >iOS</a
-          >
-          and
-          <a
-            href="https://play.google.com/store/apps/details?id=com.inventoryshield.app"
-            target="_blank"
-            >Android</a
-          >
-          which I helped to design and implement.
-        </li>
-      </ul> -->
+			<h2 id="experience">Stuff I get paid for</h2>
+			<p>
+				My personal work is mainly with open-source projects and mobile applications. Since starting
+				at <a href="https://inventoryshield.com" target="_blank">Inventory Shield, LLC</a> in 2018,
+				I began working with web technologies. Inventory Shield's tech stack is
+				<a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a> and
+				<a href="https://vuejs.org" target="_blank" class="hint">Vue.js</a> on the front-end, and
+				<a href="https://nodejs.org" target="_blank" class="hint">Node.js</a> (of course with
+				TypeScript) on the back-end. The products are web apps, and we use
+				<a href="https://cordova.apache.org" target="_blank" class="hint">Apache Cordova&trade;</a>
+				to wrap them in iOS and Android app shells for better device features.
+			</p>
+			<p
+				>Unfortunately, the company's code is closed-source. You can check out their
+				<a href="https://inventoryshield.com" target="_blank">inventory management</a> and
+				<a href="https://referralreactor.com" target="_blank">referral management</a> products at
+				their respective sites.</p
+			>
 
-      <hr />
+			<hr />
 
-      <h2 id="contact">Contact</h2>
-      <p>If you must reach me, I'm often found in these places:</p>
+			<h2 id="contact">Contact</h2>
+			<p>If you must reach me, I'm often found in these places:</p>
 
-      <ul>
-        <li>
-          GitHub:
-          <a rel="me" href="https://github.com/AverageHelper" target="_blank">AverageHelper</a>
-        </li>
-        <li>
-          Mastodon:
-          <!-- Eventually I want @avg@average.name... -->
-          <a rel="me" href="https://fosstodon.org/@avghelper" target="_blank"
-            >@avghelper@fosstodon.org</a
-          >
-        </li>
-        <li>
-          Personal Email:
-          <a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a>
-        </li>
-      </ul>
-    </main>
-  </body>
+			<ul>
+				<li>
+					Codeberg:
+					<a rel="me" href="https://codeberg.org/AverageHelper" target="_blank">AverageHelper</a>
+				</li>
+				<li>
+					GitHub:
+					<a rel="me" href="https://github.com/AverageHelper" target="_blank">AverageHelper</a>
+				</li>
+				<li>
+					Mastodon:
+					<!-- Eventually I want @avg@average.name... -->
+					<a rel="me" href="https://fosstodon.org/@avghelper" target="_blank"
+						>@avghelper@fosstodon.org</a
+					>
+				</li>
+				<li>
+					Personal Email:
+					<a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a>
+				</li>
+			</ul>
+		</main>
+	</body>
 </html>
