--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,12 @@
 		<link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
 	</head>
 	<body>
+		<header>
+			<ul>
+				<li><a href="/index.html">About</a></li>
+				<li><a href="/support.html">Support</a></li>
+			</ul>
+		</header>
 		<main class="content">
 			<h1 id="about">About Myself</h1>
 			<p>
@@ -22,31 +28,68 @@
 			<h2 id="projects">Stuff I do for fun</h2>
 			<p>
 				Here's just a few things I worked on myself that I'm proud of. (You can
-				<a href="https://github.com/AverageHelper" target="_blank">check my GitHub</a> or
-				<a href="https://codeberg.org/AverageHelper" target="_blank">Codeberg</a> for more.)
+				<a href="https://github.com/AverageHelper" target="_blank" rel="noopener noreferrer"
+					>check my GitHub</a
+				>
+				or
+				<a href="https://codeberg.org/AverageHelper" target="_blank" rel="noopener noreferrer"
+					>Codeberg</a
+				>
+				for more.)
 			</p>
 
 			<ul>
 				<li>
-					<a href="https://github.com/AverageHelper/Gamgee" target="_blank">Gamgee</a> &ndash; A fun
-					little Discord bot to help manage a music queue for public DJ events. Written in
-					<a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a>.
+					<a
+						href="https://github.com/AverageHelper/Gamgee"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Gamgee</a
+					>
+					&ndash; A fun little Discord bot to help manage a music queue for public DJ events.
+					Written in
+					<a
+						href="https://www.typescriptlang.org"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="hint"
+						>TypeScript</a
+					>.
 				</li>
 				<li>
-					<a href="https://github.com/AverageHelper/meta-comments" target="_blank">meta-comments</a>
+					<a
+						href="https://github.com/AverageHelper/meta-comments"
+						target="_blank"
+						rel="noopener noreferrer"
+						>meta-comments</a
+					>
 					&ndash; The first VS Code plugin I ever published! It decorates code based on
 					specially-formatted comments.
 				</li>
 				<li>
-					<a href="https://github.com/AverageHelper/ItemEncryptor" target="_blank">ItemEncryptor</a>
-					&ndash; A <a href="https://www.swift.org" target="_blank" class="hint">Swift</a> package
-					to make data encryption easy. I use this in some of my smaller projects to facilitate
-					end-to-end encryption of sensitive data.
+					<a
+						href="https://github.com/AverageHelper/ItemEncryptor"
+						target="_blank"
+						rel="noopener noreferrer"
+						>ItemEncryptor</a
+					>
+					&ndash; A
+					<a href="https://www.swift.org" target="_blank" rel="noopener noreferrer" class="hint"
+						>Swift</a
+					>
+					package to make data encryption easy. I use this in some of my smaller projects to
+					facilitate end-to-end encryption of sensitive data.
 				</li>
 				<li>
-					<a href="https://recorded.finance" target="_blank">Recorded Finance</a>
+					<a href="https://recorded.finance" target="_blank" rel="noopener noreferrer"
+						>Recorded Finance</a
+					>
 					&ndash; An
-					<a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank" class="hint"
+					<a
+						href="https://en.wikipedia.org/wiki/End-to-end_encryption"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="hint"
 						>end-to-end encrypted</a
 					>
 					finance app for keeping track of account balances. I had a version of this written for iOS
@@ -54,26 +97,47 @@
 					compatibility and accessibility. The project is still in its infant stages, with several
 					front-end glitches I want to fix before I "release" the project into the wild. The
 					front-end is written in
-					<a href="https://svelte.dev" target="_blank" class="hint">Svelte</a>, with
-					<a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a> on
-					the front- and back-end.
+					<a href="https://svelte.dev" target="_blank" rel="noopener noreferrer" class="hint"
+						>Svelte</a
+					>, with
+					<a
+						href="https://www.typescriptlang.org"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="hint"
+						>TypeScript</a
+					>
+					on the front- and back-end.
 				</li>
 				<li>
 					<a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
 						>Trump Donald</a
 					>
 					&ndash; An iOS application based on the game
-					<a href="https://en.wikipedia.org/wiki/Whac-A-Mole" target="_blank" class="hint"
+					<a
+						href="https://en.wikipedia.org/wiki/Whac-A-Mole"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="hint"
 						>Whac-a-mole</a
 					>.
 				</li>
 				<li>
-					<a href="https://averagehelper.github.io" target="_blank">My blog</a> &ndash; An
-					experiment to see how GitHub Pages work. I post ramblings there from time to time. The
-					posts are written in
-					<a href="https://www.markdownguide.org" target="_blank" class="hint">Markdown</a>, and the
-					site is generated automagically using
-					<a href="https://www.zola.com/" target="_blank" class="hint">Zola</a>.
+					<a href="https://averagehelper.github.io" target="_blank" rel="noopener noreferrer"
+						>My blog</a
+					>
+					&ndash; An experiment to see how GitHub Pages work. I post ramblings there from time to
+					time. The posts are written in
+					<a
+						href="https://www.markdownguide.org"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="hint"
+						>Markdown</a
+					>, and the site is generated automagically using
+					<a href="https://www.zola.com/" target="_blank" rel="noopener noreferrer" class="hint"
+						>Zola</a
+					>.
 				</li>
 			</ul>
 
@@ -82,20 +146,42 @@
 			<h2 id="experience">Stuff I get paid for</h2>
 			<p>
 				My personal work is mainly with open-source projects and mobile applications. Since starting
-				at <a href="https://inventoryshield.com" target="_blank">Inventory Shield, LLC</a> in 2018,
-				I began working with web technologies. Inventory Shield's tech stack is
-				<a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a> and
-				<a href="https://vuejs.org" target="_blank" class="hint">Vue.js</a> on the front-end, and
-				<a href="https://nodejs.org" target="_blank" class="hint">Node.js</a> (of course with
-				TypeScript) on the back-end. The products are web apps, and we use
-				<a href="https://cordova.apache.org" target="_blank" class="hint">Apache Cordova&trade;</a>
+				at
+				<a href="https://inventoryshield.com" target="_blank" rel="noopener noreferrer"
+					>Inventory Shield, LLC</a
+				>
+				in 2018, I began working with web technologies. Inventory Shield's tech stack is
+				<a
+					href="https://www.typescriptlang.org"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="hint"
+					>TypeScript</a
+				>
+				and
+				<a href="https://vuejs.org" target="_blank" rel="noopener noreferrer" class="hint"
+					>Vue.js</a
+				>
+				on the front-end, and
+				<a href="https://nodejs.org" target="_blank" rel="noopener noreferrer" class="hint"
+					>Node.js</a
+				>
+				(of course with TypeScript) on the back-end. The products are web apps, and we use
+				<a href="https://cordova.apache.org" target="_blank" rel="noopener noreferrer" class="hint"
+					>Apache Cordova&trade;</a
+				>
 				to wrap them in iOS and Android app shells for better device features.
 			</p>
 			<p
 				>Unfortunately, the company's code is closed-source. You can check out their
-				<a href="https://inventoryshield.com" target="_blank">inventory management</a> and
-				<a href="https://referralreactor.com" target="_blank">referral management</a> products at
-				their respective sites.</p
+				<a href="https://inventoryshield.com" target="_blank" rel="noopener noreferrer"
+					>inventory management</a
+				>
+				and
+				<a href="https://referralreactor.com" target="_blank" rel="noopener noreferrer"
+					>referral management</a
+				>
+				products at their respective sites.</p
 			>
 
 			<hr />
@@ -106,16 +192,32 @@
 			<ul>
 				<li>
 					Codeberg:
-					<a rel="me" href="https://codeberg.org/AverageHelper" target="_blank">AverageHelper</a>
+					<a
+						rel="me"
+						href="https://codeberg.org/AverageHelper"
+						target="_blank"
+						rel="noopener noreferrer"
+						>AverageHelper</a
+					>
 				</li>
 				<li>
 					GitHub:
-					<a rel="me" href="https://github.com/AverageHelper" target="_blank">AverageHelper</a>
+					<a
+						rel="me"
+						href="https://github.com/AverageHelper"
+						target="_blank"
+						rel="noopener noreferrer"
+						>AverageHelper</a
+					>
 				</li>
 				<li>
 					Mastodon:
 					<!-- Eventually I want @avg@average.name... -->
-					<a rel="me" href="https://fosstodon.org/@avghelper" target="_blank"
+					<a
+						rel="me"
+						href="https://fosstodon.org/@avghelper"
+						target="_blank"
+						rel="noopener noreferrer"
 						>@avghelper@fosstodon.org</a
 					>
 				</li>
