chore: `meta-comments` has moved to Codeberg

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,7 +58,7 @@
 				</li>
 				<li>
 					<a
-						href="https://github.com/AverageHelper/meta-comments"
+						href="https://codeberg.org/AverageHelper/meta-comments"
 						target="_blank"
 						rel="noopener noreferrer"
 						>meta-comments</a
