feat: Generate markup from templates

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,8 +11,12 @@
 	<body>
 		<header>
 			<ul>
-				<li><a href="/index.html">About</a></li>
-				<li><a href="/support.html">Support</a></li>
+				<li>
+					<a href="/index.html">About</a>
+				</li>
+				<li>
+					<a href="/support.html">Support</a>
+				</li>
 			</ul>
 		</header>
 		<main class="content">
@@ -110,7 +114,10 @@
 					on the front- and back-end.
 				</li>
 				<li>
-					<a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
+					<a
+						href="https://apps.apple.com/us/app/trump-donald/id1036041535"
+						target="_blank"
+						rel="noopener noreferrer"
 						>Trump Donald</a
 					>
 					&ndash; An iOS application based on the game
@@ -135,7 +142,7 @@
 						class="hint"
 						>Markdown</a
 					>, and the site is generated automagically using
-					<a href="https://www.zola.com/" target="_blank" rel="noopener noreferrer" class="hint"
+					<a href="https://www.zola.com" target="_blank" rel="noopener noreferrer" class="hint"
 						>Zola</a
 					>.
 				</li>
@@ -192,32 +199,20 @@
 			<ul>
 				<li>
 					Codeberg:
-					<a
-						rel="me"
-						href="https://codeberg.org/AverageHelper"
-						target="_blank"
-						rel="noopener noreferrer"
+					<a href="https://codeberg.org/AverageHelper" target="_blank" rel="me noopener noreferrer"
 						>AverageHelper</a
 					>
 				</li>
 				<li>
 					GitHub:
-					<a
-						rel="me"
-						href="https://github.com/AverageHelper"
-						target="_blank"
-						rel="noopener noreferrer"
+					<a href="https://github.com/AverageHelper" target="_blank" rel="me noopener noreferrer"
 						>AverageHelper</a
 					>
 				</li>
 				<li>
-					Mastodon:
 					<!-- Eventually I want @avg@average.name... -->
-					<a
-						rel="me"
-						href="https://fosstodon.org/@avghelper"
-						target="_blank"
-						rel="noopener noreferrer"
+					Mastodon:
+					<a href="https://fosstodon.org/@avghelper" target="_blank" rel="me noopener noreferrer"
 						>@avghelper@fosstodon.org</a
 					>
 				</li>
