--- a/pages/support.html
+++ b/pages/support.html
@@ -11,8 +11,12 @@
 	<body>
 		<header>
 			<ul>
-				<li><a href="/index.html">About</a></li>
-				<li><a href="/support.html">Support</a></li>
+				<li>
+					<a href="/index.html">About</a>
+				</li>
+				<li>
+					<a href="/support.html">Support</a>
+				</li>
 			</ul>
 		</header>
 		<main class="content">
