--- a/pages/index.html
+++ b/pages/index.html
@@ -10,14 +10,16 @@
 	</head>
 	<body>
 		<header>
-			<ul>
-				<li>
-					<a href="/index.html">About</a>
-				</li>
-				<li>
-					<a href="/support.html">Support</a>
-				</li>
-			</ul>
+			<nav>
+				<ul>
+					<li>
+						<a href="/index.html">About</a>
+					</li>
+					<li>
+						<a href="/support.html">Support</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
 		<main class="content">
 			<h1 id="about">About Myself</h1>
