feat: Add a link to my blog on the header

--- a/pages/support.html
+++ b/pages/support.html
@@ -15,8 +15,15 @@
 					<li>
 						<a href="/index.html">About</a>
 					</li>
+					<li
+						><a href="https://averagehelper.github.io" target="_blank" rel="noopener noreferrer"
+							>Blog</a
+						></li
+					>
 					<li>
-						<a href="/support.html">Support</a>
+						<a href="/support.html" class="disabled"
+							>Support <span class="visually-hidden">(current)</span></a
+						>
 					</li>
 				</ul>
 			</nav>
