--- a/pages/index.html
+++ b/pages/index.html
@@ -13,8 +13,15 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="/index.html">About</a>
+						<a href="/index.html" class="disabled"
+							>About <span class="visually-hidden">(current)</span></a
+						>
 					</li>
+					<li
+						><a href="https://averagehelper.github.io" target="_blank" rel="noopener noreferrer"
+							>Blog</a
+						></li
+					>
 					<li>
 						<a href="/support.html">Support</a>
 					</li>
