chore: Point to our new blog domain

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
 						>
 					</li>
 					<li
-						><a href="https://averagehelper.github.io" target="_blank" rel="noopener noreferrer"
+						><a href="https://blog.average.name" target="_blank" rel="noopener noreferrer"
 							>Blog</a
 						></li
 					>
@@ -139,9 +139,7 @@
 					>.
 				</li>
 				<li>
-					<a href="https://averagehelper.github.io" target="_blank" rel="noopener noreferrer"
-						>My blog</a
-					>
+					<a href="https://blog.average.name" target="_blank" rel="noopener noreferrer">My blog</a>
 					&ndash; An experiment to see how GitHub Pages work. I post ramblings there from time to
 					time. The posts are written in
 					<a
