--- a/pages/support.html
+++ b/pages/support.html
@@ -16,7 +16,7 @@
 						<a href="/index.html">About</a>
 					</li>
 					<li
-						><a href="https://averagehelper.github.io" target="_blank" rel="noopener noreferrer"
+						><a href="https://blog.average.name" target="_blank" rel="noopener noreferrer"
 							>Blog</a
 						></li
 					>
