chore: Move to Forgejo

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,10 +43,12 @@
 				Here's just a few things I worked on myself that I'm proud of. (You can
 				<a href="https://github.com/AverageHelper" target="_blank" rel="noopener noreferrer"
 					>check my GitHub</a
-				>
-				or
+				>,
 				<a href="https://codeberg.org/AverageHelper" target="_blank" rel="noopener noreferrer"
 					>Codeberg</a
+				>, or
+				<a href="https://git.average.name/AverageHelper" target="_blank" rel="noopener noreferrer"
+					>my Forgejo instance</a
 				>
 				for more.)
 			</p>
