--- a/pages/index.html
+++ b/pages/index.html
@@ -40,17 +40,16 @@
 
 			<h2 id="projects">Stuff I do for fun</h2>
 			<p>
-				Here's just a few things I worked on myself that I'm proud of. (You can
-				<a href="https://github.com/AverageHelper" target="_blank" rel="noopener noreferrer"
-					>check my GitHub</a
+				Here's just a few things I worked on myself that I'm proud of. The code is spread around
+				<a href="https://git.average.name/AverageHelper" target="_blank" rel="noopener noreferrer"
+					>my Forgejo instance</a
 				>,
 				<a href="https://codeberg.org/AverageHelper" target="_blank" rel="noopener noreferrer"
 					>Codeberg</a
-				>, or
-				<a href="https://git.average.name/AverageHelper" target="_blank" rel="noopener noreferrer"
-					>my Forgejo instance</a
-				>
-				for more.)
+				>, and
+				<a href="https://github.com/AverageHelper" target="_blank" rel="noopener noreferrer"
+					>GitHub</a
+				>.
 			</p>
 
 			<ul>
