feat: Link to Forgejo in header (#2)
I have my own Forgejo instance now :3

Reviewed-on: https://git.average.name/AverageHelper/portfolio/pulls/2
Co-authored-by: AverageHelper <me@average.name>
Co-committed-by: AverageHelper <me@average.name>

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,14 @@
 							>Blog</a
 						></li
 					>
+					<li
+						><a
+							href="https://git.average.name/AverageHelper"
+							target="_blank"
+							rel="noopener noreferrer"
+							>Code</a
+						></li
+					>
 					<li>
 						<a href="/support.html">Support</a>
 					</li>
