--- a/pages/support.html
+++ b/pages/support.html
@@ -20,6 +20,14 @@
 							>Blog</a
 						></li
 					>
+					<li
+						><a
+							href="https://git.average.name/AverageHelper"
+							target="_blank"
+							rel="noopener noreferrer"
+							>Code</a
+						></li
+					>
 					<li>
 						<a href="/support.html" class="disabled"
 							>Support <span class="visually-hidden">(current)</span></a
