--- a/pages/support.html
+++ b/pages/support.html
@@ -87,5 +87,20 @@
 				PRs are always welcome! <span class="emoji">&#128522;</span></p
 			>
 		</main>
+		<footer>
+			<ul>
+				<li
+					><a
+						href="https://git.average.name/AverageHelper/portfolio"
+						target="_blank"
+						rel="noopener noreferrer"
+						>View Source</a
+					></li
+				>
+				<li>
+					<a href="/contact.html">Contact</a>
+				</li>
+			</ul>
+		</footer>
 	</body>
 </html>
