feat: Add humans.txt

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
+		<link rel="author" href="humans.txt" />
 		<link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
@@ -121,6 +122,7 @@
 						>View Source</a
 					></li
 				>
+				<li><a href="/humans.txt" target="_blank" rel="noopener noreferrer">humans.txt</a></li>
 				<li>
 					<a href="/contact.html" class="disabled"
 						>Contact <span class="visually-hidden">(current)</span></a
