--- a/pages/support.html
+++ b/pages/support.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
+		<link rel="author" href="humans.txt" />
 		<link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
@@ -97,6 +98,7 @@
 						>View Source</a
 					></li
 				>
+				<li><a href="/humans.txt" target="_blank" rel="noopener noreferrer">humans.txt</a></li>
 				<li>
 					<a href="/contact.html">Contact</a>
 				</li>
