feat: Use Astro to generate static site instead of Nunjucks (#3)
Nunjucks is neat, but I don't consider it a "proper" static site generator. The syntax is funky, for one thing.

TIL about [Astro](https://astro.build), which can be configured to generate static HTML and CSS at build time. It even lets me write my components in Vue or Svelte or whatever I want! Astro also comes with its own templating language that's pretty good, very clear what's build-time logic and what the browser sees, so I'm using that as-is for now.

Hopefully this makes for easier long-term maintenance while also keeping my portfolio static-first.

Reviewed-on: https://git.average.name/AverageHelper/portfolio/pulls/3
Co-authored-by: AverageHelper <me@average.name>
Co-committed-by: AverageHelper <me@average.name>

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
@@ -13,9 +13,7 @@
 		<header>
 			<nav>
 				<ul>
-					<li>
-						<a href="/index.html">About</a>
-					</li>
+					<li><a href="/index.html">About</a></li>
 					<li
 						><a href="https://blog.average.name" target="_blank" rel="noopener noreferrer"
 							>Blog</a
@@ -29,9 +27,7 @@
 							>Code</a
 						></li
 					>
-					<li>
-						<a href="/support.html">Support</a>
-					</li>
+					<li><a href="/support.html">Support</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -110,12 +106,12 @@
 					></li
 				>
 				<li><a href="/humans.txt" target="_blank" rel="noopener noreferrer">humans.txt</a></li>
-				<li>
-					<a href="/contact.html" class="disabled"
+				<li
+					><a href="/contact.html" class="disabled"
 						>Contact <span class="visually-hidden">(current)</span></a
-					>
-				</li>
+					></li
+				>
 			</ul>
 		</footer>
-	</body>
-</html>
+	</body></html
+>
