--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
@@ -13,11 +13,11 @@
 		<header>
 			<nav>
 				<ul>
-					<li>
-						<a href="/index.html" class="disabled"
+					<li
+						><a href="/index.html" class="disabled"
 							>About <span class="visually-hidden">(current)</span></a
-						>
-					</li>
+						></li
+					>
 					<li
 						><a href="https://blog.average.name" target="_blank" rel="noopener noreferrer"
 							>Blog</a
@@ -31,9 +31,7 @@
 							>Code</a
 						></li
 					>
-					<li>
-						<a href="/support.html">Support</a>
-					</li>
+					<li><a href="/support.html">Support</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -115,40 +113,24 @@
 							>Recorded Finance</a
 						></strong
 					>
-					&ndash; An
-					<a
-						href="https://en.wikipedia.org/wiki/End-to-end_encryption"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="hint"
-						>end-to-end encrypted</a
-					>
-					finance app for keeping track of account balances. I had a version of this written for iOS
-					in Swift, but I've began to port that project to the web for better cross-platform
-					compatibility and accessibility. The project is still in its infant stages, with several
-					front-end glitches I want to fix before I "release" the project into the wild. The
-					front-end is written in
+					&ndash; An end-to-end encrypted finance app for keeping track of account balances. I had a
+					version of this written for iOS in Swift, but I've began to port that project to the web
+					for better cross-platform compatibility and accessibility. The project is still in its
+					infant stages, with several front-end glitches I want to fix before I "release" the
+					project into the wild. The front-end is written in
 					<a href="https://svelte.dev" target="_blank" rel="noopener noreferrer" class="hint"
 						>Svelte</a
-					>, with
-					<a
-						href="https://www.typescriptlang.org"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="hint"
-						>TypeScript</a
-					>
-					on the front- and back-end.
+					>, with TypeScript on the front- and back-end.
 				</li>
 				<li>
-					<strong
-						><a
+					<strong>
+						<a
 							href="https://apps.apple.com/us/app/trump-donald/id1036041535"
 							target="_blank"
 							rel="noopener noreferrer"
 							>Trump Donald</a
-						></strong
-					>
+						>
+					</strong>
 					&ndash; An iOS application based on the game
 					<a
 						href="https://en.wikipedia.org/wiki/Whac-A-Mole"
@@ -188,14 +170,7 @@
 				<a href="https://inventoryshield.com" target="_blank" rel="noopener noreferrer"
 					>Inventory Shield, LLC</a
 				>
-				in 2018, I began working with web technologies. Inventory Shield's tech stack is
-				<a
-					href="https://www.typescriptlang.org"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="hint"
-					>TypeScript</a
-				>
+				in 2018, I began working with web technologies. Inventory Shield's tech stack is TypeScript
 				and
 				<a href="https://vuejs.org" target="_blank" rel="noopener noreferrer" class="hint"
 					>Vue.js</a
@@ -233,10 +208,8 @@
 					></li
 				>
 				<li><a href="/humans.txt" target="_blank" rel="noopener noreferrer">humans.txt</a></li>
-				<li>
-					<a href="/contact.html">Contact</a>
-				</li>
+				<li><a href="/contact.html">Contact</a></li>
 			</ul>
 		</footer>
-	</body>
-</html>
+	</body></html
+>
