--- a/pages/support.html
+++ b/pages/support.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
@@ -13,9 +13,7 @@
 		<header>
 			<nav>
 				<ul>
-					<li>
-						<a href="/index.html">About</a>
-					</li>
+					<li><a href="/index.html">About</a></li>
 					<li
 						><a href="https://blog.average.name" target="_blank" rel="noopener noreferrer"
 							>Blog</a
@@ -29,11 +27,11 @@
 							>Code</a
 						></li
 					>
-					<li>
-						<a href="/support.html" class="disabled"
+					<li
+						><a href="/support.html" class="disabled"
 							>Support <span class="visually-hidden">(current)</span></a
-						>
-					</li>
+						></li
+					>
 				</ul>
 			</nav>
 		</header>
@@ -43,7 +41,7 @@
 			<p
 				>I write software for fun. If that software makes someone's life easier along the way, all
 				the better! <span class="emoji">&#10084;</span> I started writing software in 2014, began
-				working on >open source in 2016, and finally figured git out in 2018. Nearly all of the
+				working on open source in 2016, and finally figured git out in 2018. Nearly all of the
 				software I use in my day-to-day life is open source. I hope to work full time on open source
 				software one day, but my employer right now is entirely closed-source, servers aren't free,
 				and devs need to eat. Until I can make a living on FOSS, my time and ability to contribute
@@ -99,10 +97,8 @@
 					></li
 				>
 				<li><a href="/humans.txt" target="_blank" rel="noopener noreferrer">humans.txt</a></li>
-				<li>
-					<a href="/contact.html">Contact</a>
-				</li>
+				<li><a href="/contact.html">Contact</a></li>
 			</ul>
 		</footer>
-	</body>
-</html>
+	</body></html
+>
